Simplify TestWebUi